--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -1,1 +1,55 @@
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+h1 {
+	text-align: center;
+	padding: 25px;
+}
+.columns {position: relative;
+	#width: 30%;
+	border: 1px solid #000000;
+	float: left;
+	background-color: #999999;
+	margin: 1%;
+}
+.title_region {
+	width: 200px;
+	float: right;
+	position: relative;
+	clear: both;
+	text-align: center;
+	border-bottom: 1px solid black;
+	border-left: 1px solid black;
+	font-size: 1.3em;
+}
+.first {
+	background-color: #d59898;
+}
+.second {
+	background-color: #c14543;
+	color: #fff;
+}
+.third {
+	background-color: #e5d098;
+}
+p {
+	clear: both;
+	padding: 10px;
+}
+
+@media(max-width: 767px) {
+	.columns{ width: 98%;}
+}
+@media(min-width: 768px) and (max-width: 991px) {
+	div:nth-child(2){width: 48%;}
+	div:nth-child(3){width: 48%;}
+	div:nth-child(4) {width: 98%;}
+}
+@media (min-width: 992px) {
+	.columns {width: 31%;}
+}
+
