--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -13,7 +13,6 @@ h1 {
 	border: 1px solid #000000;
 	float: left;
 	background-color: #999999;
-	margin: 2%;
 }
 .title_region {
 	width: 200px;
@@ -41,14 +40,33 @@ p {
 }
 
 @media(max-width: 767px) {
-	.columns{ width: 96%;}
+	.columns{ 
+		width: 96%;
+		margin: 2% 2% 0 2%;
+	}
 }
 @media(min-width: 768px) and (max-width: 991px) {
-	div:nth-child(2){width: 46%;}
-	div:nth-child(3){width: 46%;}
-	div:nth-child(4) {width: 96%;}
+	div:nth-child(2){
+		width: 47%;
+		margin: 2% 1% 0 2%;	
+	}
+	div:nth-child(3){
+		width: 47%;
+		margin: 2% 2% 0 1%;}
+	div:nth-child(4) {
+		width: 96%;
+		margin: 2%}
 }
 @media (min-width: 992px) {
-	.columns {width: 29%;}
+	div:nth-child(2) {
+		width: 30.6%;
+		margin: 2% 0 2% 2%;}
+	div:nth-child(3) {
+		width: 30.6%;
+		margin: 2% 2% 2% 2%;}		
+	div:nth-child(4) {
+		width: 30.6%;
+		margin: 2% 2% 2% 0%;		
+	}
 }
 
