--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -42,14 +42,12 @@ p {
 @media(max-width: 767px) {
 	.columns{ 
 		width: 96%;
-		margin: 2% 2% 0 2%;
-	}
+		margin: 2% 2% 0 2%;}
 }
 @media(min-width: 768px) and (max-width: 991px) {
 	div:nth-child(2){
 		width: 47%;
-		margin: 2% 1% 0 2%;	
-	}
+		margin: 2% 1% 0 2%;}
 	div:nth-child(3){
 		width: 47%;
 		margin: 2% 2% 0 1%;}
@@ -66,7 +64,6 @@ p {
 		margin: 2% 2% 2% 2%;}		
 	div:nth-child(4) {
 		width: 30.6%;
-		margin: 2% 2% 2% 0%;		
-	}
+		margin: 2% 2% 2% 0%;}
 }
 
