Module 3 project - done

--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -9,7 +9,7 @@ h1 {
 	padding: 25px;
 }
 .columns {position: relative;
-	#width: 30%;
+	width: 30%;
 	border: 1px solid #000000;
 	float: left;
 	background-color: #999999;
